crates/au-cli/tests/it/snapshots/it__scenarios__cross-repo-type-not-a-dependency.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "type-repo-not-a-dependency",
      "message": "type 'note::base' names repo 'base', a workspace member but not a declared dependency of this repo; add 'base' to this repo's deps to cross its types",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/cross-repo-type-not-a-dependency/app/uses-base.md",
        "line_col": {
          "end": {
            "col": 17,
            "line": 2
          },
          "start": {
            "col": 7,
            "line": 2
          }
        },
        "range": {
          "end": 20,
          "start": 10
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 5,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 38,
                        "line_col": {
                          "end": {
                            "col": 39,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/cross-repo-type-not-a-dependency/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "cross-repo-type-not-a-dependency"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "cross-repo-type-not-a-dependency"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/cross-repo-type-not-a-dependency/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": null,
        "claim": [
          "au.engine.workspace::au-engine"
        ],
        "closure": [
          "au.engine.workspace::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "disabled",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          },
          {
            "divergent": false,
            "field": "discover",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          },
          {
            "divergent": false,
            "field": "edit",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 42,
                        "line_col": {
                          "end": {
                            "col": 37,
                            "line": 2
                          },
                          "start": {
                            "col": 5,
                            "line": 2
                          }
                        },
                        "start": 10
                      },
                      "file": "<root>/scenarios/cross-repo-type-not-a-dependency/.arsumbris/workspace.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "cross-repo-type-not-a-dependency"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "cross-repo-type-not-a-dependency"
                }
              },
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 51,
                        "line_col": {
                          "end": {
                            "col": 9,
                            "line": 3
                          },
                          "start": {
                            "col": 5,
                            "line": 3
                          }
                        },
                        "start": 47
                      },
                      "file": "<root>/scenarios/cross-repo-type-not-a-dependency/.arsumbris/workspace.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "base"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "base"
                }
              },
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 59,
                        "line_col": {
                          "end": {
                            "col": 8,
                            "line": 4
                          },
                          "start": {
                            "col": 5,
                            "line": 4
                          }
                        },
                        "start": 56
                      },
                      "file": "<root>/scenarios/cross-repo-type-not-a-dependency/.arsumbris/workspace.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "app"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "app"
                }
              }
            ],
            "field": "edit"
          }
        ],
        "file": "<root>/scenarios/cross-repo-type-not-a-dependency/.arsumbris/workspace.yaml",
        "section_presence": null
      },
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 9,
                        "line_col": {
                          "end": {
                            "col": 10,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/cross-repo-type-not-a-dependency/app/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "app"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "app"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/cross-repo-type-not-a-dependency/app/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "note::base"
        ],
        "closure": [
          "note::base"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "title",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/cross-repo-type-not-a-dependency/base/type/note.type.yaml",
                "repo": "base",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 77,
                        "line_col": {
                          "end": {
                            "col": 57,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/cross-repo-type-not-a-dependency/app/uses-base.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "crossing a members type without declaring the dep"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "crossing a members type without declaring the dep"
                }
              }
            ],
            "field": "title"
          }
        ],
        "file": "<root>/scenarios/cross-repo-type-not-a-dependency/app/uses-base.md",
        "section_presence": null
      },
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 10,
                        "line_col": {
                          "end": {
                            "col": 11,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/cross-repo-type-not-a-dependency/base/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "base"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "base"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/cross-repo-type-not-a-dependency/base/.arsumbris/repo.yaml",
        "section_presence": null
      }
    ]
  }
}
